--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 
 html,
 body {
-    --black: hsl(240, 6%, 13%);
-    --grey: hsl(240, 9%, 89%);
+    --black: hsl(0, 0%, 2%);
+    --grey: hsl(0, 0%, 96%);
 
     height: 100%;
     font-family: 'Roboto', sans-serif;
@@ -15,12 +15,18 @@ body {
 body {
     display: grid;
     place-items: center;
+
+    background-repeat: no-repeat;
+    background-image: url(images/Desktop.png);
+    background-size: cover;
+    background-position: center;
+    background-color: var(--black);
 }
 
 main {
-    background: url(images/background.svg);
+    background: url(images/Mobile.png);
     width: 375px;
-    height: 812px;
+    height: 590px;
 
     border-radius: 30px;
 }
@@ -32,7 +38,6 @@ main {
     text-align: center;
 
     color: var(--grey);
-
 }
 
 .avatar {
@@ -80,7 +85,7 @@ p {
 }
 
 ul {
-    margin-top: 4rem;
+    margin-top: 1.5rem;
 
     list-style: none;
     padding: 0;
